# SavvyCAN

./: .gitignore  CMakeLists.txt  README.md  SavvyCAN.pro  canframemodel.cpp  config.h  deployment_guide.md  framefileio.cpp  framesenderwindow.cpp  mainwindow.cpp  mainwindow.h  setup.iss
.github/workflows/: build.yml  release.yml
help/: deployment_guide.md
re/: graphingwindow.cpp  graphingwindow.h  temporalgraphwindow.cpp
scripts/: rebuild.sh
ui/: mainwindow.ui
